fix: bottom toolbar jumps to top if navbar hidden #479

--- a/src/Styles/container.css
+++ b/src/Styles/container.css
@@ -62,8 +62,8 @@
             }
             /* fix: bottom margin needs to be removed when keyboard is open on phone */
             .is-phone.ntb-is-keyboard-open & {
-                margin-bottom: unset;
-                transition: unset;
+                margin-bottom: unset !important;
+                transition: unset !important;
             }
         }
 
