--- a/styles.css
+++ b/styles.css
@@ -2263,8 +2263,8 @@ body.is-mobile button.cg-note-toolbar-fab[data-fab-metadata*="mgls"] {
             }
             /* fix: bottom margin needs to be removed when keyboard is open on phone */
             .is-phone.ntb-is-keyboard-open & {
-                margin-bottom: unset;
-                transition: unset;
+                margin-bottom: unset !important;
+                transition: unset !important;
             }
         }
 
